alteracao de List.of para Arrays.asList